public struct Constants
{
    public const string AUDIO_MAIN = "MAIN.ogg";
    public const string AUDIO_ADVANCE_MENU = "ADVANCE_MENUBOX.ogg";
    public const string AUDIO_BACK_MENU = "BACK_MENUBOX.ogg"; 

    public const string EXCEPTION_FILENOTFOUND = "Sorry there is no file found by the given path";

    public static string RESOURCES_ROOT_DIR_FULLPATH;
    public const string RESOURCES_ROOT = "GameResources/";
    public const string RESOURCES_ROOT_DEFAULT = "DefaultFiles/";
    public const string RESOURCES_ROOT_MUSIC = "Music/";
    public const string RESOURCES_ROOT_MUSIC_FX = RESOURCES_ROOT_MUSIC + "FX/";    
    public const string RESOURCES_ROOT_PICS = "Pics/";
    public const string RESOURCES_ROOT_PICS_CARDS = RESOURCES_ROOT_PICS + "Cards/";
    public const string RESOURCES_ROOT_PICS_TOKENS = RESOURCES_ROOT_PICS + "Tokens/";
    public const string RESOURCES_ROOT_SCRIPTS = "Scripts/";
    public const string RESOURCES_ROOT_DECKS = "Decks/";
    public const string RESOURCES_ROOT_DB = "DB/";
    public const string RESOURCES_FILE_CONF = "config.file";
    public const string RESOURCES_FILE_CARDSDB = "cards.db";
    public const string RESOURCES_CONF_FILE_SEPARATOR = "|";

    public const string ITEM_BATTLE = "BattleP";
    public const string ITEM_BATTLE_SOLOBATTLE = "SoloBattleP";
    public const string ITEM_BATTLE_MULTIPLAYER = "MultiplayerP";
    public const string ITEM_CARD_COLLECTION = "CardCollectionP";
    public const string ITEM_DECK_ADMINISTRATION = "DeckAdministrationP";
    public const string ITEM_CONFIGURATION = "ConfigurationP";
    public const string ITEM_CONFIGURATION_GRAPHICS = "GraphicsP";
    public const string ITEM_CONFIGURATION_CONTROLS = "ControlsP";
    public const string ITEM_CONFIGURATION_AUDIO = "AudioP";
    public const string ITEM_CONFIGURATION_GRAPHICS_OK = "GraphicsOK";
    public const string ITEM_CONFIGURATION_GRAPHICS_CANCEL = "GraphicsCancel";
    public const string ITEM_CONFIGURATION_CONTROLS_OK = "ControlsOK";
    public const string ITEM_CONFIGURATION_CONTROLS_CANCEL = "ControlsCancel";
    public const string ITEM_CONFIGURATION_AUDIO_OK = "AudioOK";
    public const string ITEM_CONFIGURATION_AUDIO_CANCEL = "AudioCancel";
    public const string ITEM_BACK = "BackP";
    public const string ITEM_FILTER = "FilterP";
    public const string ITEM_LARROW = "LeftArrow";
    public const string ITEM_RARROW = "RightArrow";

    public const string FLOATCONTAINER_GRAPHICS = "GraphicsConfiguration";
    public const string FLOATCONTAINER_AUDIO = "AudioConfiguration";
    public const string FLOATCONTAINER_CONTROLS = "ConstrolsConfiguration";

    public const byte CONF_GRAPH_ASPECT_54 = 0;
    public const byte CONF_GRAPH_ASPECT_43 = 1;
    public const byte CONF_GRAPH_ASPECT_32 = 2;
    public const byte CONF_GRAPH_ASPECT_1610 = 3;
    public const byte CONF_GRAPH_ASPECT_169 = 4;
    public const byte CONF_GRAPH_FILE = 5;
    public const byte CONF_AUDIO_FILE = 6;
    public const byte CONF_CONTROLS_FILE = 7;

    public const string TRANSITION_MAINMENU = "MainMenu";
    public const string TRANSITION_BATTLEMENU = "BattleMenu";
    public const string TRANSITION_CONFIGURATIONMENU = "ConfigurationMenu";    
}


